kubernetes/grpc-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gke-grpc-example
  namespace: grpc-example
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: gke-grpc-app
    spec:
      containers:
        - name: gke-grpc-server
          image: jeanpsv/gke-grpc-example:latest
          imagePullPolicy: Always
          command: ["ruby", "src/server.rb"]
          ports:
            - name: http2
              containerPort: 50051
