kubernetes/app-cheddar.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cheddar
spec:
  ports:
    - name: http
      targetPort: 80
      port: 80
  selector:
    app: cheese
    task: cheddar
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cheddar
  labels:
    app: cheese
    task: cheddar
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cheese
      task: cheddar
  template:
    metadata:
      labels:
        app: cheese
        task: cheddar
        version: v0.0.1
    spec:
      containers:
        - name: cheese
          image: errm/cheese:cheddar
          ports:
            - containerPort: 80
