kubernetes/app-wensleydale.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wensleydale
spec:
  ports:
    - name: http
      targetPort: 80
      port: 80
  selector:
    app: cheese
    task: wensleydale
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wensleydale
  labels:
    app: cheese
    task: wensleydale
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cheese
      task: wensleydale
  template:
    metadata:
      labels:
        app: cheese
        task: wensleydale
        version: v0.0.1
    spec:
      containers:
        - name: cheese
          image: errm/cheese:wensleydale
          ports:
            - containerPort: 80
