kubernetes/cheese-wensleydale-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wensleydale
  namespace: apps
spec:
  ports:
    - name: http
      protocol: TCP
      targetPort: http
      port: 80
  selector:
    app: cheese
    task: wensleydale
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wensleydale
  namespace: apps
  labels:
    app: cheese
    task: wensleydale
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cheese
      task: wensleydale
  template:
    metadata:
      labels:
        app: cheese
        task: wensleydale
        version: v0.0.1
    spec:
      containers:
        - name: cheese
          image: errm/cheese:wensleydale
          ports:
            - name: http
              containerPort: 80
