kubernetes/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-ingress-service
  namespace: traefik
spec:
  type: LoadBalancer
  selector:
    app: traefik-ingress-lb
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
    - name: dashboard
      protocol: TCP
      port: 8080
      targetPort: dashboard
