kubernetes/traefik-webui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-ui
  namespace: traefik
spec:
  type: NodePort
  selector:
    app: traefik-ingress-lb
  ports:
    - name: http
      port: 80
      targetPort: dashboard
