kubernetes/app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cheese
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: "stilton.service"
      http:
        paths:
          - path: /
            backend:
              serviceName: stilton
              servicePort: http
    - host: "cheddar.service"
      http:
        paths:
          - path: /
            backend:
              serviceName: cheddar
              servicePort: http
    - host: "wensleydale.service"
      http:
        paths:
          - path: /
            backend:
              serviceName: wensleydale
              servicePort: http
